added new row modifier & cta-link modifier

--- a/index.html
+++ b/index.html
@@ -313,10 +313,10 @@
       <div class="o-container">
         <div class="o-layout">
           <div class="o-layout__item u-1-of-2-bp3">
-            <h2 class="c-lead c-lead--xl u-color-primary-light">
+            <h2 class="c-lead c-lead--xl u-color-primary-light_footer">
               Let us tell you more.
             </h2>
-            <p class="c-lead c-lead--lg u-color-primary-light">
+            <p class="c-lead c-lead--lg u-color-primary-light_footer">
               We will email you to start the conversation.
             </p>
             <p>
