--- a/index.html
+++ b/index.html
@@ -340,10 +340,26 @@
         </div>
       </div>
     </section>
-    <footer class="o-row o-rw--md">
+    <footer class="o-row o-rw--md u-pt-clear">
       <div class="o-container u-p-more">
         <div class="c-footer">
-          <div class="c-footer__logo">
+
+          <div class="c-footer__nav">
+            <nav class="c-nav c-nav--meta">
+              <ul class="o-list c-nav__list">
+                <li class="c-nav__item">
+                  <a class="c-nav__link c-nav__link--meta" href="#!">Contact</a>
+                </li>
+                <li class="c-nav__item">
+                  <a class="c-nav__link c-nav__link--meta" href="#!"
+                    >Legal / Privacy</a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="c-logo__footer">
             <p class="c-logo">
               <svg
                 class="c-logo__symbol"
@@ -368,39 +384,23 @@
 
           <div class="c-footer__nav">
             <nav class="c-nav c-nav--meta">
-              <ul class="o-list c-nav__list">
-                <li class="c-nav__item">
-                  <a class="c-nav__link c-nav__link--meta" href="#!">Contact</a>
-                </li>
-                <li class="c-nav__item">
-                  <a class="c-nav__link c-nav__link--meta" href="#!"
-                    >Legal / Privacy</a
-                  >
-                </li>
-              </ul>
-            </nav>
-          </div>
-
-          <div class="c-footer__nav">
-            <nav class="c-nav c-nav--meta">
-              <ul class="o-list c-nav__list">
+              <ul class="o-list c-nav__list__icons">
                 <li class="c-nav__item">
                   <a class="c-nav__link c-nav__link--meta" href="#!">
-                    <img src="img/svg/facebook-logo.svg" width="24px" alt="" />
+                    <img src="img/svg/facebook.svg" width="48px" alt="Facebook" />
                   </a>
                 </li>
                 <li class="c-nav__item">
                   <a class="c-nav__link c-nav__link--meta" href="#!">
                     <img
-                      src="img/svg/twitter-logo-silhouette.svg"
-                      width="24px"
-                      alt=""
-                    />
+                      src="img/svg/twitter.svg"
+                      width="48px"
+                      alt="Twitter"
                   </a>
                 </li>
                 <li class="c-nav__item">
                   <a class="c-nav__link c-nav__link--meta" href="#!">
-                    <img src="img/svg/linkedin-logo.svg" width="24px" alt="" />
+                    <img src="img/svg/linkedin.svg" width="48px" alt="LinkedIn" />
                   </a>
                 </li>
               </ul>
